# TheFilmPulse

./: .gitignore  Dockerfile_b  Dockerfile_f  README.md  dev-compose.yml  dummy.env  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: app.py  auth_provider_config.py  compute_results.py  config.py  extensions.py  models.py  requirements.txt  routes.py  serializers.py  view_decorators.py  views.py
backend/migrations/: README
backend/migrations/versions/: 1df48155ec4b_add_step_value_and_unit_in_prediction.py  2974839ce71b_add_claimed_user_id_in_voucher_code.py  2aab95098ca9_rename_mean_prediction_to_mean_value_in_.py  42259b5ead35_add_columns_in_useropinion_and_.py  4c7b8ffae55b_rename_to_mean_prediction_just_for_.py  51d6c31d9621_add_end_date_to_opinion_and_prediction.py  6010b51e65f5_add_user_bans.py  7d6e4407111b_add_summary_in_film_table.py  cde22260f422_add_cast_metadata_in_film_table.py  d06e209a52cf_add_columns_in_tables_to_prepare_for_.py  d21e7dee68c3_add_user_email_and_full_name_fields.py  e05575dcb3e2_add_terms_field_in_voucher.py  e3991bae1bc8_add_expiry_date_in_vouchercode.py  eee43b6f9555_final_switch_to_mean_value_in_.py  fc46da08f3e6_make_prediction_column_lowercase_in_all_.py
backend/utils/: otp.py
data/: README  add_data.py  data.yaml
frontend/: README.md  app.json  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: edit-profile.tsx  login.js
frontend/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx
frontend/src/: App.js
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: banner.tsx  banners.tsx  claimed-coupons.tsx  confirm-action-footer.tsx  confirm-option.tsx  confirm-prediction.tsx  contest-tabs.tsx  coupon-disclosure.tsx  coupon.module.css  coupon.tsx  film-header.tsx  (+25 more)
(+117 files in other folders)
