[tool.poetry]
name = "thefilmpulse"
version = "0.1.0"
description = ""
authors = ["j3rwin <jerwinn7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"
pyjwt = "^2.8.0"
flask-sqlalchemy = "^3.1.1"
mysqlclient = "^2.2.4"
flask-migrate = "^4.0.7"
flask-marshmallow = "^1.2.1"
twilio = "^9.0.5"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
