[tool.poetry]
name = "thefilmpulse"
version = "0.1.0"
description = ""
authors = ["j3rwin <jerwinn7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"
pyjwt = "^2.8.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-marshmallow = "^1.2.1"
flask-jwt-extended = "^4.6.0"
requests = "^2.32.2"
otplessauthsdk = "^0.3.3"
psycopg = {extras = ["binary"], version = "^3.1.19"}
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
